Adding boilerplate to primary layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
-  <title>Www</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <!-- Meta -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
   <%= csrf_meta_tags %>
-</head>
-<body>
 
-<%= yield %>
+  <!-- Title --> 
+  <title>kaishi.ro</title>
+
+  <!-- Stylesheets -->
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
+  
+  <!-- JavaScripts -->
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+</head>
+<body class="page">
+
+  <header class="header">
+
+    <nav class="nav nav--primary">
+    </nav>
+  
+  </header>
+
+  <%= yield %>
+
+  <footer class="footer">
+  </footer>
 
 </body>
 </html>
