--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,24 +16,14 @@
 
   <!-- Stylesheets -->
   <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-  <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,100italic,400italic,700|Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
   
   <!-- JavaScripts -->
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </head>
 <body class="page">
 
-  <header class="header">
-
-    <nav class="nav nav--primary">
-    </nav>
-  
-  </header>
-
   <%= yield %>
-
-  <footer class="footer">
-  </footer>
 
 </body>
 </html>
